--- a/deploy/applications.yaml
+++ b/deploy/applications.yaml
@@ -1,45 +1,45 @@
 ---
-# Argo CD App definition for cluster1
+# Argo CD App definition for dev cluster1
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-cluster1
+  name: dev-demo-cluster1
 spec:
   destination:
-    server: https://10.62.25.11:6443
-    namespace: gitops-kubecon-demo
+    server: https://kubernetes.default.svc #https://10.62.25.11:6443
+    namespace: dev #gitops-kubecon-demo
   project: kubecon-demo
   source:
-    path: deploy/overlays/cluster1
-    repoURL: https://github.com/qingkunl/argocd-app-of-apps-demo.git
+    path: deploy/overlays/dev
+    repoURL: https://github.com/singhrohit444/argocd-app-of-apps-demo.git
     targetRevision: HEAD
 ---
-# Argo CD App definition for cluster2
+# Argo CD App definition for qa cluster2
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-cluster2
+  name: qa-demo-cluster2
 spec:
   destination:
-    server: https://10.62.33.11:6443
-    namespace: gitops-kubecon-demo
+    server: https://kubernetes.default.svc #https://10.62.33.11:6443
+    namespace: qa #gitops-kubecon-demo
   project: kubecon-demo
   source:
-    path: deploy/overlays/cluster2
-    repoURL: https://github.com/qingkunl/argocd-app-of-apps-demo.git
+    path: deploy/overlays/qa
+    repoURL: https://github.com/singhrohit444/argocd-app-of-apps-demo.git
     targetRevision: HEAD
 ---
-# Argo CD App definition for cluster3
+# Argo CD App definition for prod cluster3
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-cluster3
+  name: prod-demo-cluster2
 spec:
   destination:
-    server: https://10.62.45.11:6443
-    namespace: gitops-kubecon-demo
+    server: https://kubernetes.default.svc #https://10.62.45.11:6443
+    namespace: prod #gitops-kubecon-demo
   project: kubecon-demo
   source:
-    path: deploy/overlays/cluster3
-    repoURL: https://github.com/qingkunl/argocd-app-of-apps-demo.git
+    path: deploy/overlays/prod
+    repoURL: https://github.com/singhrohit444/argocd-app-of-apps-demo.git
     targetRevision: HEAD
