--- a/deploy/applications.yaml
+++ b/deploy/applications.yaml
@@ -1,45 +1,26 @@
----
-# Argo CD App definition for dev cluster1
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: ApplicationSet
 metadata:
-  name: dev-demo-cluster1
+  name: poc-app
 spec:
-  destination:
-    server: https://kubernetes.default.svc #https://10.62.25.11:6443
-    namespace: dev #gitops-kubecon-demo
-  project: kubecon-demo
-  source:
-    path: deploy/overlays/cluster1
-    repoURL: https://github.com/singhrohit444/argocd-app-of-apps-demo.git
-    targetRevision: HEAD
----
-# Argo CD App definition for qa cluster2
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: qa-demo-cluster2
-spec:
-  destination:
-    server: https://kubernetes.default.svc #https://10.62.33.11:6443
-    namespace: qa #gitops-kubecon-demo
-  project: kubecon-demo
-  source:
-    path: deploy/overlays/cluster2
-    repoURL: https://github.com/singhrohit444/argocd-app-of-apps-demo.git
-    targetRevision: HEAD
----
-# Argo CD App definition for prod cluster3
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: prod-demo-cluster2
-spec:
-  destination:
-    server: https://kubernetes.default.svc #https://10.62.45.11:6443
-    namespace: prod #gitops-kubecon-demo
-  project: kubecon-demo
-  source:
-    path: deploy/overlays/cluster3
-    repoURL: https://github.com/singhrohit444/argocd-app-of-apps-demo.git
-    targetRevision: HEAD
+  generators:
+  - list:
+      elements:
+      - namespace: dev
+        url: https://kubernetes.default.svc
+      - namespace: qa
+        url: https://kubernetes.default.svc
+      - namespace: prod
+        url: https://kubernetes.default.svc
+  template:
+    metadata:
+      name: '{{"{{"}}namespace{{"}}"}}-poc-app'
+    spec:
+      project: kubecon-demo
+      source:
+        path: deploy
+        repoURL: https://github.com/singhrohit444/argocd-app-of-apps-demo.git
+        targetRevision: HEAD
+      destination:
+        server: '{{"{{"}}url{{"}}"}}'
+        namespace: '{{"{{"}}namespace{{"}}"}}'
